<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Selection">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Switch
            android:id="@+id/seleccion_switch_ejercicios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goTo"
            android:text="@string/ejercicios" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:orientation="horizontal">

            <Space
                android:layout_width="10dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/seleccion_button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:onClick="goTo"
                android:text="@string/ej1"
                android:textSize="30sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/selection_button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:onClick="goTo"
                android:text="@string/ej2"
                android:textSize="30sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="0dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:orientation="horizontal">

            <Space
                android:layout_width="10dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/selection_button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:onClick="goTo"
                android:text="@string/ej3"
                android:textSize="30sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/selection_button_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:onClick="goTo"
                android:text="@string/ej4"
                android:textSize="30sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="0dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:orientation="horizontal">

            <Space
                android:layout_width="10dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/selection_button_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:onClick="goTo"
                android:text="@string/ej5"
                android:textSize="30sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/selection_button_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:onClick="goTo"
                android:text="@string/ej6"
                android:textSize="30sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="0dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:gravity="center"
            android:orientation="horizontal">

            <Space
                android:layout_width="10dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/selection_button_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="goTo"
                android:text="@string/ej7"
                android:textSize="30sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/selection_button_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="goTo"
                android:text="@string/ej8"
                android:textSize="30sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="0dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:gravity="center"
            android:onClick="goTo"
            android:orientation="horizontal">

            <Space
                android:layout_width="10dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/selection_button_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="goTo"
                android:text="@string/ej9"
                android:textSize="30sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/selection_button_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="goTo"
                android:text="@string/ej10"
                android:textSize="30sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="0dp" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>