<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/main_imageView_icono"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal|top"
            android:layout_weight="34"
            android:contentDescription="@string/content"
            app:srcCompat="@drawable/ic_caralentes" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10" />

        <EditText
            android:id="@+id/main_textView_nombre"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:autofillHints=""
            android:background="#B3FFFFFF"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/txt_nombre"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="#B3000000"
            app:autoSizeTextType="uniform" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7" />

        <Button
            android:id="@+id/main_button_jugar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:onClick="play"
            android:text="@string/bt_jugar"
            app:autoSizeTextType="uniform" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7" />

        <TextView
            android:id="@+id/main_textView_bestScore"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:background="#B3E3D4D4"
            android:gravity="center"
            android:text="@string/b_score"
            android:textColor="@color/black"
            app:autoSizeTextType="uniform" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>