<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_config"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppearanceConfiguration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_weight="2" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="37"
            android:contentDescription="@string/content"
            android:onClick="emojis"
            app:srcCompat="@drawable/ic_caralentes" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:onClick="emojis"
            android:text="@string/cambiaremoji"
            app:autoSizeTextType="uniform" />

        <Space
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_weight="2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="37"
            android:contentDescription="@string/content"
            android:onClick="backgrounds"
            app:srcCompat="@drawable/ic_bg_6" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:onClick="backgrounds"
            android:text="@string/cambiarfondo"
            app:autoSizeTextType="uniform" />

        <Space
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_weight="2" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>