<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Configuration">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Space
                android:layout_width="0dp"
                android:layout_height="10dp"/>

            <Button
                android:id="@+id/configuracion_button_apariencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="appearance"
                android:text="@string/config_apariencia"
                android:textSize="24sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="10dp"/>

            <Button
                android:id="@+id/configuracion_button_sonido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="sound"
                android:text="@string/config_sonido"
                android:textSize="24sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="10dp"/>

            <Button
                android:id="@+id/configuracion_button_developer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="developer"
                android:text="@string/config_developer"
                android:textSize="24sp" />

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</RelativeLayout>